samples/invalid/syntax/tagged_spacing.g
language g0

bad_value = tag: value
bad_constructor = : tag
